er i gang med Fragment5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity2"></activity>
+        <activity android:name=".activities.MainImplicitteActivity"></activity>
+        <activity android:name=".activities.MainEksplicitteActivity" />
+        <activity android:name=".activities.MainActivity2" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
